{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 1354,
  "lineage": "efa70088-1ac5-4f74-77ab-705a33227ad3",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.igw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:internet-gateway/igw-08b42c6a59f0e3a84",
            "id": "igw-08b42c6a59f0e3a84",
            "owner_id": "091570247959",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-igw",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-igw",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-0bfe0af997050be16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ngw",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.ngw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02319b2e3fc87a6a7",
            "domain": "vpc",
            "id": "eipalloc-02319b2e3fc87a6a7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-193-202-238.compute-1.amazonaws.com",
            "public_ip": "34.193.202.238",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.ngw",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "module.ngw.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02319b2e3fc87a6a7",
            "association_id": "eipassoc-0b3516bace07af43c",
            "connectivity_type": "public",
            "id": "nat-0b92fdf9ecac5cbba",
            "network_interface_id": "eni-0739064827d3cea1b",
            "private_ip": "10.0.1.28",
            "public_ip": "34.193.202.238",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0994687071acd94c0",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-ngw",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-ngw",
              "Project": "vprofile-project"
            }
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.ngw.aws_eip.nat_eip",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-subnet",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:route-table/rtb-008e87294cc3c87a0",
            "id": "rtb-008e87294cc3c87a0",
            "owner_id": "091570247959",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b92fdf9ecac5cbba",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-private-RT",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-private-RT",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfe0af997050be16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.ngw.aws_eip.nat_eip",
            "module.ngw.aws_nat_gateway.nat-gw",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-subnet",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:route-table/rtb-0f08aa47dfd1f6efb",
            "id": "rtb-0f08aa47dfd1f6efb",
            "owner_id": "091570247959",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08b42c6a59f0e3a84",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-public-RT",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-public-RT",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfe0af997050be16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ce3dc8c0eac0007",
            "route_table_id": "rtb-008e87294cc3c87a0",
            "subnet_id": "subnet-0092856bd6b384531"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.ngw.aws_eip.nat_eip",
            "module.ngw.aws_nat_gateway.nat-gw",
            "module.routeable.aws_route_table.private-subnet",
            "module.subnets.aws_subnet.private",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086921fc03c727201",
            "route_table_id": "rtb-008e87294cc3c87a0",
            "subnet_id": "subnet-0994138da6684aa1a"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.ngw.aws_eip.nat_eip",
            "module.ngw.aws_nat_gateway.nat-gw",
            "module.routeable.aws_route_table.private-subnet",
            "module.subnets.aws_subnet.private1",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c1e7926f5c0951c",
            "route_table_id": "rtb-0f08aa47dfd1f6efb",
            "subnet_id": "subnet-0994687071acd94c0"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.routeable.aws_route_table.public-subnet",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.routeable",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "module.routeable.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c76cd4f384f47a9",
            "route_table_id": "rtb-0f08aa47dfd1f6efb",
            "subnet_id": "subnet-04c4efd5c139e9995"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.routeable.aws_route_table.public-subnet",
            "module.subnets.aws_subnet.public1",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend-servers",
      "provider": "module.securitygroups.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:security-group/sg-059d0991ec42de1c5",
            "description": "security group for backend servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-059d0991ec42de1c5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca0c89b3a2bf422f"
                ],
                "self": true,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "open db port for webapp",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca0c89b3a2bf422f"
                ],
                "self": true,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "open memcached port for webapp",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 11211
              },
              {
                "cidr_blocks": [],
                "description": "open rabbitmq port for webapp",
                "from_port": 5672,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 5672
              },
              {
                "cidr_blocks": [],
                "description": "open webapp port for nginx(frontend) ",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ca0c89b3a2bf422f"
                ],
                "self": true,
                "to_port": 8080
              }
            ],
            "name": "backend-servers",
            "name_prefix": "",
            "owner_id": "091570247959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "backend-servers-sg",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "backend-servers-sg",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfe0af997050be16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.securitygroups.aws_security_group.frontend-servers",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks-sg",
      "provider": "module.securitygroups.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:security-group/sg-089359d2f32ebe7e2",
            "description": "Example security group allowing all traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089359d2f32ebe7e2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all inbound traffic from itself",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "eks-security-group",
            "name_prefix": "",
            "owner_id": "091570247959",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bfe0af997050be16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend-servers",
      "provider": "module.securitygroups.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:security-group/sg-0ca0c89b3a2bf422f",
            "description": "security group for nginx-server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca0c89b3a2bf422f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "frontend-servers",
            "name_prefix": "",
            "owner_id": "091570247959",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "frontend-servers-sg",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "frontend-servers-sg",
              "Project": "vprofile-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bfe0af997050be16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:subnet/subnet-0092856bd6b384531",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0092856bd6b384531",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091570247959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-sub-private",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-sub-private",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-0bfe0af997050be16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:subnet/subnet-0994138da6684aa1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0994138da6684aa1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "091570247959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-sub-private2",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-sub-private2",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-0bfe0af997050be16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:subnet/subnet-0994687071acd94c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0994687071acd94c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "091570247959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-sub-public",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-sub-public",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-0bfe0af997050be16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "module.subnets.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:subnet/subnet-04c4efd5c139e9995",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c4efd5c139e9995",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "091570247959",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-sub-public2",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-sub-public2",
              "Project": "vprofile-project"
            },
            "vpc_id": "vpc-0bfe0af997050be16"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:091570247959:vpc/vpc-0bfe0af997050be16",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-032ade87a372d516e",
            "default_route_table_id": "rtb-030f007c181bb2c59",
            "default_security_group_id": "sg-0d3d84c0f74d95a79",
            "dhcp_options_id": "dopt-0ef3da9f8262dfc65",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bfe0af997050be16",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030f007c181bb2c59",
            "owner_id": "091570247959",
            "tags": {
              "Environment": "dev",
              "Name": "vprofile-vpc",
              "Project": "vprofile-project"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "vprofile-vpc",
              "Project": "vprofile-project"
            }
          }
        }
      ]
    }
  ]
}